# Memarena

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  PCH.hpp  README.md  conanfile.txt  gcovr.cfg  meson.build
.github/workflows/: BuildAndTest.yml
Benchmarks/: CMakeLists.txt
Benchmarks/Source/: AlignmentBenchmark.cpp  AllocationsBenchmark.cpp  Main.cpp  MemoryTestObjects.hpp  StackAllocatorAccessBenchmark.cpp  StackAllocatorAllocationsBenchmark.cpp  StackAllocatorArrayAllocationsBenchmark.cpp  StackAllocatorBenchmark.cpp
Example/Source/: Main.cpp
Include/Memarena/: Aliases.hpp  FallbackAllocator.hpp  LinearAllocator.hpp  Mallocator.hpp  Memarena.hpp  MemoryManager.hpp  PoolAllocator.hpp  StackAllocator.hpp  StackAllocatorBase.hpp  StackAllocatorSafe.hpp  TypeAliases.hpp
Include/Memarena/Utility/: Alignment.hpp
Include/MemoryManager/: Aliases.hpp  MemoryManager.hpp  PCH.hpp  StackAllocator.hpp  StackAllocatorBase.hpp  StackAllocatorSafe.hpp  TypeAliases.hpp
Include/MemoryManager/Utility/: Alignment.hpp  Padding.hpp
Source/: Aliases.hpp  Allocator.cpp  Allocator.hpp  AllocatorData.hpp  AllocatorSettings.hpp  AllocatorUtils.cpp  AllocatorUtils.hpp  Assert.hpp  BoundsChecking.cpp  BoundsChecking.hpp  Debug.hpp  DebugBreak.hpp  Macros.hpp  Main.cpp  MemoryManager.cpp  MemoryManager.hpp  MemoryTracker.cpp  MemoryTracker.hpp  Pointer.hpp  Policies.hpp  StackAllocator.cpp  Traits.hpp  TypeAliases.hpp
Source/Allocators/: LinearAllocator.hpp  PoolAllocator.hpp  StackAllocator.hpp
Source/Allocators/FallbackAllocator/: FallbackAllocator.hpp
Source/Allocators/LinearAllocator/: LinearAllocator.hpp  LinearAllocatorPMR.hpp  LinearAllocatorTemplated.hpp  README.md
Source/Allocators/LocalAllocator/: LocalAllocator.hpp
Source/Allocators/Mallocator/: Mallocator.hpp  MallocatorPMR.hpp  MallocatorTemplated.hpp
Source/Allocators/PoolAllocator/: PoolAllocator.hpp  PoolAllocatorPMR.hpp  PoolAllocatorTemplated.hpp  PoolAllocatorTemplatedPMR.hpp
Source/Allocators/StackAllocator/: StackAllocator.hpp  StackAllocatorPMR.hpp  StackAllocatorTemplated.hpp
Source/Allocators/StackAllocatorResizable/: StackAllocatorPMR.hpp  StackAllocatorResizable.hpp
Source/Allocators/VirtualAllocator/: VirtualAllocator.hpp  VirtualAllocatorPMR.hpp  VirtualAllocatorTemplated.hpp
Source/LinearAllocator/: LinearAllocator.hpp
Source/Policies/: BoundsCheckPolicy.hpp  MultithreadedPolicy.hpp  Policies.hpp
Source/StackAllocator/: StackAllocator copy.hpp  StackAllocator.cpp  StackAllocator.hpp  StackAllocatorBase.cpp  StackAllocatorBase.hpp  StackAllocatorImpl.hpp  StackAllocatorSafe.cpp  StackAllocatorSafe.hpp  StackAllocatorUtils.cpp  StackAllocatorUtils.hpp
Source/Utility/: Alignment.cpp  Alignment.hpp  Enums.hpp  Math.hpp  Padding.cpp  Padding.hpp  README.md  VirtualMemory.cpp  VirtualMemory.hpp
Source/Utility/Alignment/: Alignment.cpp  Alignment.hpp  README.md
Tests/: .clang-tidy  CMakeLists.txt
Tests/Source/: AlignmentTest.cpp  FallbackAllocatorTest.cpp  LinearAllocatorTest.cpp  Main.cpp  MallocatorTest.cpp  MemoryManagerTest.cpp  MemoryTestObjects.hpp  MemoryTrackerTest.cpp  PaddingTest.cpp  PolicyTest.cpp  PoolAllocatorTest.cpp  StackAllocatorSafeTest.cpp  StackAllocatorTest.cpp
